Added a few copyrights, footer and index.

--- a/docs/ElunaDoc/templates/index.html
+++ b/docs/ElunaDoc/templates/index.html
@@ -9,10 +9,10 @@
 {% block content %}
     <div class='docblock'>
         <h1 id="the-eluna-engine-api" class='section-header'>
-            <a href="#the-eluna-engine-api">The Eluna Engine API</a>
+            <a href="#the-eluna-engine-api">The Eluna Lua Engine&copy; API</a>
         </h1>
         <p>
-            The Eluna Engine's API allows you to add your own Lua code to be executed when certain events (called "hooks") occur.
+            The Eluna Lua Engine&copy; API allows you to add your own Lua code to be executed when certain events (called "hooks") occur.
         </p>
         <p>
             Add a new in-game command, give life to creatures with new AI, or even light players who try to duel on fire!
