Added temporary link to LuaFunctions documentation

--- a/docs/ElunaDoc/templates/method.html
+++ b/docs/ElunaDoc/templates/method.html
@@ -35,6 +35,7 @@
         {{ current_method.description|parse_links }}
         {%- else %}
         <p>This method is <em>undocumented</em>. <strong>Use at your own risk.</strong></p>
+        <p>For temporary documentation, please check the <a href="https://github.com/ElunaLuaEngine/Eluna/blob/master/LuaFunctions.cpp">LuaFunctions</a> source file.</p>
         {%- endif %}
 
         <h2 id="synopsis" class='section-header'>
