Replace old Social link with new one

--- a/docs/ElunaDoc/templates/index.html
+++ b/docs/ElunaDoc/templates/index.html
@@ -33,7 +33,7 @@
             Each fork there has Eluna already integrated, so you just need to compile and go!
         </p>
         <p>
-            Follow us on <a href="https://twitter.com/EmuDevs">our Twitter page</a> to view the latest news about what's going on with Eluna.
+            Join our community <a href="https://discord.gg/bjkCVWqqfX">Discord</a> server to keep up with Eluna development and user provided support.
         </p>
 
         <h2 id="tutorials-and-guides" class='section-header'>
