Update copyright date for the new year

--- a/docs/ElunaDoc/templates/_base.html
+++ b/docs/ElunaDoc/templates/_base.html
@@ -100,6 +100,6 @@
 <script src="{{ static('main.js') }}"></script>
 <script async src="{{ root('search-index.js') }}"></script>
 <center>Generated on <script src="{{ root('date.js') }}"></script></center>
-<center>&copy;2023 - Eluna Lua Engine</center>
+<center>&copy; 2010 - 2024 Eluna Lua Engine</center>
 </body>
 </html>
