Add dark mode theme for search bar

--- a/docs/ElunaDoc/templates/_base.html
+++ b/docs/ElunaDoc/templates/_base.html
@@ -38,13 +38,13 @@
 <nav class="sub">
     <form class="search-form js-only">
         <input class="search-input" name="search"
-               autocomplete="off"
-               placeholder="Click or press 'S' to search, '?' for more options..."
-               type="search">
+            autocomplete="off"
+            placeholder="Click or press 'S' to search..."
+            type="search">
                    
         <div class="toggle-container" id="themeToggle">
-            <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <circle cx="12" cy="12" r="5"></circle>
+            <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="12" cy="12" r="5"></circle>
                 <line x1="12" y1="1" x2="12" y2="3"></line>
                 <line x1="12" y1="21" x2="12" y2="23"></line>
                 <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
@@ -54,7 +54,7 @@
                 <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
                 <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
             </svg>
-            <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg">
                 <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
             </svg>
         </div>
